fix: spacing bug was removed

--- a/src/components/UI/molecules/JobCardDesktop/JobCardDesktop.module.scss
+++ b/src/components/UI/molecules/JobCardDesktop/JobCardDesktop.module.scss
@@ -60,7 +60,7 @@
     align-items: flex-start;
 
     @container (min-width: 1000px) {
-      width: 497px;
+      width: 700px;
       gap: 10px;
       display: grid;
       grid-template-columns: repeat(3, 1fr);
